tests/errors/interface_not_interface.dang
# Test implementing a non-interface type

type NotAnInterface {
  pub foo: String!
}

type Person implements NotAnInterface {
  pub name: String!
}
